# impatient-computer-vision

./: .gitignore  1_our_data.ipynb  2_classify.ipynb  2_classify_embed.ipynb  3_embeddings.ipynb  4_object_detection.ipynb  4_segmentation.ipynb  5_segmentation.ipynb  6_keypoints.ipynb  7_fine_tuning.ipynb  7_visual_language_models.ipynb  8_fine_tuning.ipynb  8_visual_language_models.ipynb  README.md  getting_started.ipynb  pyproject.toml
